PA_Education/TestMenifest/force-app/main/default/objects/BingoCell__c/BingoCell__c.object-meta.xml
<CustomObject>
    <description>대유넥스티어 2023 송년회에서 사용 할 Bingo Cell Object</description>
    <label>Bingo Cell</label>
    <nameField>
        <displayFormat>Cell-{0}</displayFormat>
        <label>Bingo Cell No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>