PA_Education/TestMenifest/force-app/main/default/objects/BingoCell__c/fields/BingoBoard__c.field-meta.xml
<CustomField>
    <fullName>BingoBoard__c</fullName>
    <label>Bingo Board</label>
    <referenceTo>BingoBoard__c</referenceTo>
    <relationshipLabel>Bingo Cell</relationshipLabel>
    <relationshipName>Bingo_Cell</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>