PA_Education/TestMenifest/force-app/main/default/objects/BingoCell__c/fields/BingoMember__c.field-meta.xml
<CustomField>
    <fullName>BingoMember__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bingo Member</label>
    <referenceTo>BingoMember__c</referenceTo>
    <relationshipLabel>Bingo Cell</relationshipLabel>
    <relationshipName>Bingo_Cell</relationshipName>
    <type>Lookup</type>
</CustomField>