PA_Education/TestMenifest/force-app/main/default/objects/BingoCell__c/fields/CellX__c.field-meta.xml
<CustomField>
    <fullName>CellX__c</fullName>
    <description>X 축 번호</description>
    <label>CellX</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>