PA_Education/TestMenifest/force-app/main/default/objects/BingoCell__c/fields/CellY__c.field-meta.xml
<CustomField>
    <fullName>CellY__c</fullName>
    <description>Y 축 번호</description>
    <label>CellY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>