PA_Education/TestMenifest/force-app/main/default/objects/BingoCell__c/fields/IsChecked__c.field-meta.xml
<CustomField>
    <fullName>IsChecked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Cell 선택 여부</description>
    <label>Is Checked</label>
    <type>Checkbox</type>
</CustomField>