PA_Education/TestMenifest/force-app/main/default/objects/BingoCell__c/validationRules/MemberUniqueValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>MemberUniqueValidation</fullName>
    <active>false</active>
    <description>BingoBoard__c 값이 같으면서 BingoMember__c가 같은 레코드 생성 불가</description>
    <errorConditionFormula>ISNEW() || NOT(
  AND(
    BingoBoard__c = PRIORVALUE(BingoBoard__c),
    BingoMember__c = PRIORVALUE(BingoMember__c)
  )
)</errorConditionFormula>
    <errorMessage>BingoBoard__c 값이 같으면서 BingoMember__c가 같은 레코드 생성 불가</errorMessage>
</ValidationRule>